Colaboratory를 통해 생성됨

--- a/이지훈1강.ipynb
+++ b/이지훈1강.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOyMGSqoC78naGO5CN5r9Db",
+      "authorship_tag": "ABX9TyPRrqN+1D919kI3j6EF5gTG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,14 +29,473 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "7K9GNsWYrqtx"
       },
       "outputs": [],
       "source": [
-        "ㅓㅗ해ㅕㅎㅍ"
+        "def greet():\n",
+        "  print(\"hello world\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "greet()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xVTHZVgqyiOF",
+        "outputId": "9b16f87f-f5ac-457d-fc97-2f3c9376807f"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(a,b):\n",
+        "  c=a+b\n",
+        "  return c"
+      ],
+      "metadata": {
+        "id": "gTdCYlOUzIe9"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(add(3,7))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Buce5g4SzkXj",
+        "outputId": "a949cb6a-d2cc-4ab3-eab4-67f0068999d6"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def multipiy(a,b):\n",
+        "  c=a*b\n",
+        "  return c"
+      ],
+      "metadata": {
+        "id": "wIQ5D1xO01Iz"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(multipiy(2,3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cpYERO9u1cSi",
+        "outputId": "f2d19639-08f3-44a3-eec6-18930518c2da"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet2(name):\n",
+        "  print('반갑습니다',name)\n",
+        "  print(name, '님은 파이썬의 세계로 오셨습니다')"
+      ],
+      "metadata": {
+        "id": "pmpPP1uW3ZQF"
+      },
+      "execution_count": 27,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "greet2('이지훈')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u1uoiq1m4g99",
+        "outputId": "7cd8d5c9-7c4c-469a-e379-28ce8a1ce3b5"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "반갑습니다 이지훈\n",
+            "이지훈 님은 파이썬의 세계로 오셨습니다\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def adder(num1,num2):\n",
+        "  sum=num1+num2\n",
+        "  print('덧셈 결과: ',num1+num2)"
+      ],
+      "metadata": {
+        "id": "Bp9zggsS4yoD"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "adder(10,5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SkRofkmA5rCr",
+        "outputId": "41a1f118-a2e4-41bd-c166-6068e2a2d5b3"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "덧셈 결과:  15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def adder(num1,num2):\n",
+        "  sum=num1+num2\n",
+        "  return sum"
+      ],
+      "metadata": {
+        "id": "fD0N5Qr36NRw"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result=adder(10,5)"
+      ],
+      "metadata": {
+        "id": "bubZ-v-B7EFK"
+      },
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kDZ7NF2G7NAS",
+        "outputId": "1d2b5ce4-1455-4a6b-e6b2-438d87ff5bcf"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def adder(num1,num2):\n",
+        "  sum=num1+num2\n",
+        "  return sum"
+      ],
+      "metadata": {
+        "id": "T8fltnPk7z9x"
+      },
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def main():\n",
+        "  print(adder(8,3))"
+      ],
+      "metadata": {
+        "id": "sIRf1Xyn8sD4"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "main()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vU-diE2j8-mQ",
+        "outputId": "b9d4982a-d434-4958-8751-d214537bc90b"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result=eval(input(\"뭐든 넣어요:\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C9blSPnR9Fw4",
+        "outputId": "575431a0-c419-413d-83dd-aed396398dcb"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "뭐든 넣어요:4-8+5+5+5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "g8lna_H5-LB4",
+        "outputId": "6dca2a65-425a-4945-b433-46dc3346238a"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "11"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def ret():\n",
+        "  return 12"
+      ],
+      "metadata": {
+        "id": "TqRgoX44-XRG"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result=eval(input(\"뭐든 넣어요:\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7mr02LD--e5o",
+        "outputId": "0df88916-b8c1-45c6-d6fb-2cb069257500"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "뭐든 넣어요:ret()\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UvmEKwCp-4d1",
+        "outputId": "ce36b78a-3979-48d3-e819-97245b2854ee"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet_three_times():\n",
+        "  print('hi ')\n",
+        "  print('hi ')\n",
+        "  print('hi ')"
+      ],
+      "metadata": {
+        "id": "mOJKoSZbAU6F"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "greet_three_times()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T93hsjZqAuYH",
+        "outputId": "477b1ca0-443f-4cd7-acab-05d28b71e7d7"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hi \n",
+            "hi \n",
+            "hi \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def greet_10(num):\n",
+        "  if (num>0):\n",
+        "    print('hi ')\n",
+        "    num=num-1\n",
+        "    greet_10(num)"
+      ],
+      "metadata": {
+        "id": "0kWQ2eaAA3Ny"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "greet_10(3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gh7PHHlgBa6_",
+        "outputId": "71351a8a-b76f-4a38-caf1-3f4ff2871d47"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hi \n",
+            "hi \n",
+            "hi \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "CHYQeyIsBu8p"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
