--- a/이지훈1강.ipynb
+++ b/이지훈1강.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPRrqN+1D919kI3j6EF5gTG",
+      "authorship_tag": "ABX9TyN+y+8qIp0oyN8B3zc4lh0D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "7K9GNsWYrqtx"
       },
@@ -51,7 +51,7 @@
         "id": "xVTHZVgqyiOF",
         "outputId": "9b16f87f-f5ac-457d-fc97-2f3c9376807f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "gTdCYlOUzIe9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -87,7 +87,7 @@
         "id": "Buce5g4SzkXj",
         "outputId": "a949cb6a-d2cc-4ab3-eab4-67f0068999d6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "wIQ5D1xO01Iz"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,7 +123,7 @@
         "id": "cpYERO9u1cSi",
         "outputId": "f2d19639-08f3-44a3-eec6-18930518c2da"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "pmpPP1uW3ZQF"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -159,7 +159,7 @@
         "id": "u1uoiq1m4g99",
         "outputId": "7cd8d5c9-7c4c-469a-e379-28ce8a1ce3b5"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "Bp9zggsS4yoD"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -196,7 +196,7 @@
         "id": "SkRofkmA5rCr",
         "outputId": "41a1f118-a2e4-41bd-c166-6068e2a2d5b3"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
       "metadata": {
         "id": "fD0N5Qr36NRw"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +228,7 @@
       "metadata": {
         "id": "bubZ-v-B7EFK"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
         "id": "kDZ7NF2G7NAS",
         "outputId": "1d2b5ce4-1455-4a6b-e6b2-438d87ff5bcf"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "T8fltnPk7z9x"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -276,7 +276,7 @@
       "metadata": {
         "id": "sIRf1Xyn8sD4"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -291,7 +291,7 @@
         "id": "vU-diE2j8-mQ",
         "outputId": "b9d4982a-d434-4958-8751-d214537bc90b"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,7 +314,7 @@
         "id": "C9blSPnR9Fw4",
         "outputId": "575431a0-c419-413d-83dd-aed396398dcb"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -337,7 +337,7 @@
         "id": "g8lna_H5-LB4",
         "outputId": "6dca2a65-425a-4945-b433-46dc3346238a"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,7 +360,7 @@
       "metadata": {
         "id": "TqRgoX44-XRG"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -375,7 +375,7 @@
         "id": "7mr02LD--e5o",
         "outputId": "0df88916-b8c1-45c6-d6fb-2cb069257500"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -398,7 +398,7 @@
         "id": "UvmEKwCp-4d1",
         "outputId": "ce36b78a-3979-48d3-e819-97245b2854ee"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -420,7 +420,7 @@
       "metadata": {
         "id": "mOJKoSZbAU6F"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -435,7 +435,7 @@
         "id": "T93hsjZqAuYH",
         "outputId": "477b1ca0-443f-4cd7-acab-05d28b71e7d7"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -460,7 +460,7 @@
       "metadata": {
         "id": "0kWQ2eaAA3Ny"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -475,7 +475,7 @@
         "id": "gh7PHHlgBa6_",
         "outputId": "71351a8a-b76f-4a38-caf1-3f4ff2871d47"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,11 +490,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "sum=0\n",
+        "for i in range(1,11):\n",
+        "  sum=sum+i"
+      ],
       "metadata": {
         "id": "CHYQeyIsBu8p"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     }
   ]
