Colaboratory를 통해 생성됨

--- a/이지훈1강.ipynb
+++ b/이지훈1강.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMK+wgPc8w6FnmXJVilI0+H",
+      "authorship_tag": "ABX9TyN0L3noFbswuldTPYf2xzL3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -522,7 +522,7 @@
         },
         "outputId": "f4d392ca-b7e0-4a5b-bfcd-0750dd5a1354"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -548,7 +548,7 @@
         "id": "60QI-MV8IDU3",
         "outputId": "16c2af84-0e6c-4d24-9cc8-abc5485c7a40"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +681,7 @@
         "id": "7kA-U2-TMsXx",
         "outputId": "3fc4daad-a8bd-48ae-f99a-32c9256d38f5"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +706,7 @@
         "id": "w1EMp-UacPMl",
         "outputId": "ef0f67fb-4ec8-49de-bd5a-3dd30758c9d0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -734,7 +734,7 @@
         "id": "zUsMCRqOcm87",
         "outputId": "52325910-51bd-44d0-9938-b5501d8b2373"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -762,7 +762,7 @@
         "id": "IQFSwxHcdCGh",
         "outputId": "6eb88906-e6bd-4018-b8f8-3b9a5062e291"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -790,7 +790,7 @@
         "id": "JZCNJ0e_dko_",
         "outputId": "f81182bd-e9c9-4c77-a641-df7787c41bba"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -821,7 +821,7 @@
         "id": "R-RQcG-Fdv9X",
         "outputId": "dc64ce0d-1eb4-4311-e89e-a542cb99420b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -850,7 +850,7 @@
         "id": "_whaYA8nfD6T",
         "outputId": "e110968d-1956-488e-e1d9-c9a0f4180b91"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +873,7 @@
         "id": "7RFrtx-zg0M9",
         "outputId": "c1dbe3fa-1da3-4c5e-b50c-ab0318f9fae0"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -899,7 +899,7 @@
         "id": "71_1gd5Shg5y",
         "outputId": "1ce66a1e-8fd9-4399-992b-e16445861794"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -925,7 +925,7 @@
         "id": "rdIBqmnXhzM6",
         "outputId": "8dc6e165-e27b-4169-ee1d-33b26a843f63"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -951,7 +951,7 @@
         "id": "iTCbmLsRh7zp",
         "outputId": "29731c31-85ee-4da1-f20f-edb42ac138f8"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -977,7 +977,7 @@
         "id": "jFq2L7goibiR",
         "outputId": "10e5fcf7-3eff-460b-8317-558e6b079423"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1003,7 +1003,7 @@
         "id": "_6iNc1m7igFJ",
         "outputId": "2f6d1dd7-de2e-4966-a40b-aacccbafbbf5"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,7 +1029,7 @@
         "id": "ITGJp3ZLi0iL",
         "outputId": "28cd4fbd-9851-4c6f-dcd1-37245c8a8c65"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1055,7 @@
         "id": "ZPKr5NRWjFfX",
         "outputId": "731d9e7a-b14c-4bd0-daaa-fe0652c099ec"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1081,7 +1081,7 @@
         "id": "VeMghyUOkX0C",
         "outputId": "d5be7ec2-a66c-4228-d857-ee8c4c522631"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1107,7 +1107,7 @@
         "id": "tQOuCnhAkmgd",
         "outputId": "f7719205-54d0-4d48-d227-efbe545c6782"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1133,7 +1133,7 @@
         "id": "ewJIdKdIlc0n",
         "outputId": "d197c0ab-c810-467d-cd38-7c2c16ece412"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1163,7 +1163,7 @@
         "id": "1AZucyldlnen",
         "outputId": "6bc129b8-2b45-4445-e0a0-daaad258f4be"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1186,7 +1186,7 @@
       "metadata": {
         "id": "iPtmOr4iqVm_"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1204,7 +1204,7 @@
         "id": "DKCVgE1isIOv",
         "outputId": "fd56e2d0-b054-4497-be57-27dc02f1c1e6"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1218,12 +1218,95 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "pocket = ('paper', 'handphone')\n",
+        "card = True\n",
+        "if 'money' in pocket:\n",
+        "     print(\"택시를 타고가라\")\n",
+        "else:\n",
+        "   if card:\n",
+        "        print(\"택시를 타고가라\")\n",
+        "   else:\n",
+        "       print(\"걸어가라\")"
+      ],
       "metadata": {
-        "id": "xDBssC31tAw5"
+        "id": "xDBssC31tAw5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "396d1364-7e69-40cb-b1bb-5a7b6051b86b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "택시를 타고가라\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pocket = ('paper', 'cellphone')\n",
+        "card = True\n",
+        "if 'money' in pocket:\n",
+        "    print(\"택시를 타고가라\")\n",
+        "elif card:\n",
+        "    print(\"택시를 타고가라\")\n",
+        "else:\n",
+        "   print(\"걸어가라\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MmyH7WXXe4re",
+        "outputId": "4a6e285d-7a28-418c-d55c-d91a1cc34406"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "택시를 타고가라\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if score >= 60:\n",
+        "     message = \"success\"\n",
+        "else:\n",
+        "    message = \"failure\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 227
+        },
+        "id": "LlzGSOPCgGz8",
+        "outputId": "9b6fb002-cd31-4754-9bf2-0b5321a2d55b"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-97682fdead1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mscore\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m60\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m      \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"success\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"failure\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'score' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
