--- a/이지훈1강.ipynb
+++ b/이지훈1강.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyObDv4NciudX2AoEAuYIm8j",
+      "authorship_tag": "ABX9TyOx6XngAo0BnVc9LNE8nngZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -807,6 +807,58 @@
     {
       "cell_type": "code",
       "source": [
+        "bool(1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uLKmEutYngvp",
+        "outputId": "d425740a-e8d4-4d61-bf94-43ef9a279727"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bool(0)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QKU5TLJWnpEX",
+        "outputId": "7813740b-cc58-4f9a-cfbe-a4a39fe7b63b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "money = 2000\n",
         "if money >= 3000:\n",
         "    print(\"택시를 타고 가라\")\n",
@@ -936,6 +988,32 @@
           },
           "metadata": {},
           "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bool(True or True)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vJET2iogn7I4",
+        "outputId": "d65d971d-9c09-4c2e-d151-fa0b25e5c884"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
         }
       ]
     },
@@ -1283,9 +1361,7 @@
         "if score >= 60:\n",
         "     message = \"success\"\n",
         "else:\n",
-        "     message = \"failure\"\n",
-        "\n",
-        "message = \"success\" if score >= 60 else \"failure\""
+        "     message = \"failure\""
       ],
       "metadata": {
         "colab": {
@@ -1295,7 +1371,7 @@
         "id": "LlzGSOPCgGz8",
         "outputId": "5b71d145-59f1-4a95-8d47-9c6420a0388d"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
