Colaboratory를 통해 생성됨

--- a/이지훈2강3강.ipynb
+++ b/이지훈2강3강.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO9kZIDj+u5OQajMvwMlcAJ",
+      "authorship_tag": "ABX9TyP6mnUU099TdadnhNIttHBn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -484,31 +484,43 @@
     {
       "cell_type": "code",
       "source": [
-        "a = np.full((2,3,4), 6, dtype = np.int8)\n",
+        "a = np.full((2,3,4), -1, dtype=float)\n",
         "print(a)"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 190
+          "base_uri": "https://localhost:8080/"
         },
         "id": "lwMnHipzT1M5",
-        "outputId": "4780736d-c9e5-4975-eba7-41271e8bebb7"
+        "outputId": "ef9d3a59-0dca-4411-bd5c-6bfeb40fff56"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-52bac2aba3af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfull\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mint8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[-1. -1. -1. -1.]\n",
+            "  [-1. -1. -1. -1.]\n",
+            "  [-1. -1. -1. -1.]]\n",
+            "\n",
+            " [[-1. -1. -1. -1.]\n",
+            "  [-1. -1. -1. -1.]\n",
+            "  [-1. -1. -1. -1.]]]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "D296bjF1Dg5J"
+      },
+      "execution_count": 15,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1910,6 +1922,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "self:자기 자신(객체)을 가리키는 명령어"
+      ],
+      "metadata": {
+        "id": "zk3N16uVF9lG"
+      }
     },
     {
       "cell_type": "code",
