Colaboratory를 통해 생성됨

--- a/3강_과제보강_프로젝트.ipynb
+++ b/3강_과제보강_프로젝트.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1CBziwvoxZjULHZpeS2Tp0wI9P5ys0sRF",
-      "authorship_tag": "ABX9TyMAnhtu+YfV8tGHHusczqYx",
+      "authorship_tag": "ABX9TyMXbtEwQYd8WLUYxJ4fJQrf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "DPr6uaiGCRSZ"
       },
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "hXywESPoDRNC"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "rqnGAuubDWSE"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -102,9 +102,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ovqUYTxBGZ-6",
-        "outputId": "7af4c67a-c8b9-4484-83d6-c2e2a0edfa80"
+        "outputId": "f5b0ab1b-2eac-4427-fd0e-f5f1f476a4a8"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -524,7 +524,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -536,7 +536,7 @@
       "metadata": {
         "id": "jDZxEvBsGdKQ"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -549,9 +549,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vQnwxMQrGhWA",
-        "outputId": "848590ad-1742-4a0d-ad6c-51b575432517"
+        "outputId": "3eb1687e-0dac-4f3e-f10f-e4b491a37a9b"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -971,9 +971,251 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "ZdoShHIPe_4Z"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdata = pd.Series(wordCounts)\n",
+        "pdata[60:70]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jRmq8XjzfCwt",
+        "outputId": "6ce14331-058f-4edd-f2ef-381bbc403b00"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "corners        1\n",
+              "creative       1\n",
+              "crippled       1\n",
+              "cup            1\n",
+              "dark           1\n",
+              "day            1\n",
+              "daybreak       1\n",
+              "declaration    1\n",
+              "decree         1\n",
+              "deeds.         1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdata = pd.Series(wordCounts)\n",
+        "pdata[70:80]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NLoL8T0DfQk1",
+        "outputId": "f56951ea-c752-4e61-8493-f0876248c657"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "defaulted        1\n",
+              "degenerate       1\n",
+              "demand           1\n",
+              "democracy.       1\n",
+              "demonstration    1\n",
+              "desolate         1\n",
+              "destiny          1\n",
+              "destiny.         1\n",
+              "devotees         1\n",
+              "discipline.      1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdata = pd.Series(wordCounts)\n",
+        "pdata[80:90]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iV_cOSLZfcRd",
+        "outputId": "15a76032-0aff-4079-a2e9-ffe329864fd3"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "discontent         1\n",
+              "discrimination.    1\n",
+              "distrust           1\n",
+              "dramatize          1\n",
+              "drinking           1\n",
+              "drug               1\n",
+              "emancipation       1\n",
+              "emerges.           1\n",
+              "end                1\n",
+              "end,               1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdata = pd.Series(wordCounts)\n",
+        "pdata[90:100]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8CZqRDKXfjJ0",
+        "outputId": "2449d7c0-02e0-433f-a155-f3bd014f4ad3"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "engage       1\n",
+              "engulfed     1\n",
+              "equality.    1\n",
+              "every        1\n",
+              "evidenced    1\n",
+              "exile        1\n",
+              "fall         1\n",
+              "fatal        1\n",
+              "fatigue      1\n",
+              "fierce       1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdata = pd.Series(wordCounts)\n",
+        "pdata[100:110]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ENGF1QGfftH8",
+        "outputId": "75a237fa-31f3-4dc7-ac3a-67b706bc404e"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "finds          1\n",
+              "five           1\n",
+              "flames         1\n",
+              "force          1\n",
+              "force.         1\n",
+              "forever        1\n",
+              "foundations    1\n",
+              "free.          1\n",
+              "freedom.       1\n",
+              "funds          1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdata = pd.Series(wordCounts)\n",
+        "pdata[110:120]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ASusrZytf6Xd",
+        "outputId": "5c452a82-9d0c-483c-e352-7566ef39609e"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "funds.\"        1\n",
+              "gain           1\n",
+              "gaining        1\n",
+              "ghetto         1\n",
+              "give           1\n",
+              "given          1\n",
+              "go             1\n",
+              "god's          1\n",
+              "gradualism.    1\n",
+              "granted        1\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yNPD0pdegB9t"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
